# OpenOBS-PyGUI

./: .gitignore  .style.yapf  README.md  pyproject.toml  rebuild.sh  requirements.txt
src/: main.py  sensorIcon.icns
src/calibrators/: __init__.py  _base_calibrator.py  single_variable_linear.py
src/plots/: __init__.py  _base_plot.py  real_time_spectrum_plot.py  scatter_plot.py  time_series_plot.py
src/sensors/: __init__.py  _base_sensor.py  as7265x_sensor.py  vcnl4010_sensor.py
src/util/: serial_comm.py  test_comm.py  xor_checksum.py
